--- a/PeopleSearch/Views/Person/ConfigurationResult.cshtml
+++ b/PeopleSearch/Views/Person/ConfigurationResult.cshtml
@@ -1,10 +1,33 @@
 ﻿@model PeopleSearch.Models.ConnectionString
-@{
-    ViewBag.Title = "ConfigurationResult";
+
+
+@if (@Model.Message.Contains("Connection established successfully"))
+{
+    <div class=" form-control-static ">
+        <div class="alert-success">
+            @Html.Label(@Model.Message)
+            </div>
+        <div class="">
+            @Html.Label(@Model.FinalConfigurationString)
+        </div>
+        </div>
+
 }
 
-<h2>Configuration Status</h2>
+@if (!@Model.Message.Contains("Connection established successfully"))
+{
+    <div class=" form-control-static ">
+        <div class="alert-danger">
+            Error Occured while loading seed data. Please try again with correct connectionstring configurations
+            @Html.Label(@Model.Message)
+        </div>
+        <div class="">
+            @Html.Label(@Model.FinalConfigurationString)
+        </div>
+    </div>
 
-<span>@Model.Status</span>
-<span>@Model.Message</span>
-<span>@Model.FinalConfigurationString</span>
+}
+
+
+
+
