--- a/PeopleSearch/Content/Site.css
+++ b/PeopleSearch/Content/Site.css
@@ -1,7 +1,8 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
-     background-color:#f1f1f1;
+     background-color:#6f5499;
+     color:white;
 }
 
 /* Set padding to keep content from hitting the edges */
