--- a/PeopleSearch/Views/Person/Search.cshtml
+++ b/PeopleSearch/Views/Person/Search.cshtml
@@ -8,7 +8,7 @@
 
 <div class="container search-container-div">
     <div class="page-header"><h1>Search</h1></div>
-    <div class="row col-sm-10">      
+    <div class="row col-sm-10">
         <div class="input-group col-sm-8">
             <input type="text" id="searchTextBox" class="form-control searchTextBox" placeholder="Enter first name or last name" />
             <span class="input-group-addon search-span" id="searchBtn" onclick="SearchPerson(event)">
@@ -21,9 +21,9 @@
         Loading...
     </div>
 
- 
-    <div id="peepleDetails" class="peepleDetails">
-       
+
+    <div id="peopleDetails" class="peopleDetails">
+
     </div>
 </div>
 
