Added Area to the solution

--- a/PeopleSearch/Areas/AreaPerson/Views/Person/ConfigurationResult.cshtml
+++ b/PeopleSearch/Areas/AreaPerson/Views/Person/ConfigurationResult.cshtml
@@ -1,16 +1,15 @@
-﻿@model PeopleSearch.Models.ConnectionString
-
+﻿@model PeopleSearch.Areas.AreaPerson.Models.ConnectionString
 
 @if (@Model.Message.Contains("Connection established successfully"))
 {
     <div class=" form-control-static ">
         <div class="alert-success">
             @Html.Label(@Model.Message)
-            </div>
+        </div>
         <div class="">
             @Html.Label(@Model.FinalConfigurationString)
         </div>
-        </div>
+    </div>
 
 }
 
