--- a/PeopleSearch/Areas/AreaPerson/Views/Person/Register.cshtml
+++ b/PeopleSearch/Areas/AreaPerson/Views/Person/Register.cshtml
@@ -1,5 +1,4 @@
-﻿@model PeopleSearch.Models.Person
-
+﻿@model PeopleSearch.Areas.AreaPerson.Models.Person
 @{
     ViewBag.Title = "Register a person";
     Layout = "~/Views/Shared/_Layout.cshtml";
