--- a/PeopleSearch/Areas/AreaPerson/Views/Person/Search.cshtml
+++ b/PeopleSearch/Areas/AreaPerson/Views/Person/Search.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<PeopleSearch.Models.Person>
+﻿@model IEnumerable<PeopleSearch.Areas.AreaPerson.Models.Person>
 
 @{
     ViewBag.Title = "Search for a person";
