--- a/PeopleSearch/Views/Shared/_Layout.cshtml
+++ b/PeopleSearch/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PeeopleSearch - @ViewBag.Title</title>
+    <title>PeopleSearch - @ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Common/css")
 
