Validations and warning message for Search page

--- a/PeopleSearch/Areas/AreaPerson/Views/Person/Search.cshtml
+++ b/PeopleSearch/Areas/AreaPerson/Views/Person/Search.cshtml
@@ -7,7 +7,7 @@
 
 
 <div class="container search-container-div">
-    <div class="page-header"><h1>Search</h1></div>
+    <div class="page-header"><h1>Search person by first name or last name</h1></div>
     <div class="row col-sm-10">
         <div class="input-group col-sm-8">
             <input type="text" id="searchTextBox" class="form-control searchTextBox" placeholder="Enter first name or last name" />
@@ -16,7 +16,11 @@
             </span>
         </div>
 
+        <div id="blankValidationMsg" class="col-lg-offset-1 col-sm-4" style="color:red"></div>
     </div>
+   
+</div>
+
     <div id="spinner">
         Loading...
     </div>
