--- a/PeopleSearch/Areas/AreaPerson/Views/Person/Result.cshtml
+++ b/PeopleSearch/Areas/AreaPerson/Views/Person/Result.cshtml
@@ -1,6 +1,11 @@
 ﻿
 @model IEnumerable<PeopleSearch.ViewModels.PersonViewModel>
 
+@if(Model.Count() < 1)
+{
+    <div class="alert-warning col-sm-4 zeroRecordMsg">No person exist with this name. Please try again! </div>
+}
+
 @foreach (var person in Model)
 {
     <div class="container detail-div-top-buffer">
