Fixed controls show/hide bugs for Register page

--- a/PeopleSearch/Areas/AreaPerson/Views/Person/Register.cshtml
+++ b/PeopleSearch/Areas/AreaPerson/Views/Person/Register.cshtml
@@ -60,19 +60,18 @@
             <div class="col-sm-4  ">
                 <button id="registerBtn" onclick="RegisterPerson()" class="btn btn-success btn-block">Register</button>
             </div>
-            <div class="alert alert-warning col-sm-off-4 col-sm-8" id="validationMessage">
-                <p>First name and birthday can't be left empty. Birthday must not exceed today's date.</p>
+            <div class="" id="validationMessage">
+                <p></p>
             </div>
         </div>
 
         <div class="container top-buffer">
             <div class="form-group ">
-                <div class="alert alert-success" id="successMessage">
-                    <strong>Success! Person registered sucessfully.</strong>
+                <div class="" id="successMessage">
                 </div>
 
-                <div class="alert alert-warning" id="errorMessage">
-                    <strong>Failure! Unexpected error occured while saving a record.</strong>
+                <div class="" id="errorMessage">
+                    <strong></strong>
                 </div>
             </div>
         </div>
