Fixed UI error and success messages for connection string

--- a/PeopleSearch/Areas/AreaPerson/Views/Person/Index.cshtml
+++ b/PeopleSearch/Areas/AreaPerson/Views/Person/Index.cshtml
@@ -153,9 +153,10 @@
             <div class="col-md-5">
                 <button type="submit" id="btnSubmit2" class="btn btn-success btn-block">Configure</button>
             </div>
+           
         </div>
 
-
+        <div id="ConfigurationResultDiv2"></div>
 
     </div>
 }
