--- a/PeopleSearch/Areas/AreaPerson/Views/Person/ConfigurationResult.cshtml
+++ b/PeopleSearch/Areas/AreaPerson/Views/Person/ConfigurationResult.cshtml
@@ -2,7 +2,8 @@
 
 @if (@Model.Message.Contains("Connection established successfully"))
 {
-    <div class=" form-control-static ">
+    <div class="col-lg-offset-2 col-sm-6 form-control-static ">
+
         <div class="alert-success">
             @Html.Label(@Model.Message)
         </div>
@@ -15,9 +16,9 @@
 
 @if (!@Model.Message.Contains("Connection established successfully"))
 {
-    <div class=" form-control-static ">
+    <div class="col-lg-offset-2 form-control-static ">
         <div class="alert-danger">
-            Error Occured while loading seed data. Please try again with correct connectionstring configurations
+            <label> Error Occured while loading seed data. Please re-launch application and provide new connectionstring configurations</label>
             @Html.Label(@Model.Message)
         </div>
         <div class="">
