--- a/PeopleSearch/Areas/AreaPerson/Views/Person/Index.cshtml
+++ b/PeopleSearch/Areas/AreaPerson/Views/Person/Index.cshtml
@@ -86,7 +86,7 @@
             <div class="col-md-2">
             </div>
             <div class="col-md-5">
-                <button type="submit" id="btnSubmit1" class="btn btn-success btn-block">Configure</button>
+                <button type="submit" id="btnSubmit1" class="btn btn-success btn-block">Configure SQL Server</button>
             </div>
         </div>
 
@@ -125,14 +125,14 @@
                 @Html.Label(@"Provider name:", new { @class = "control-label", @for = "inputdefault" })
             </div>
             <div class="col-md-5">
-                @Html.TextBoxFor(model => model.ProviderName, new { @id = "ProviderName2", @class = "providerName form-control" })
+                @Html.TextBoxFor(model => model.ProviderName, new { @disabled = "true", @id = "ProviderName2", @class = "providerName form-control" })
                 @Html.ValidationMessageFor(model => model.ProviderName, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class=" form-group">
             <div class="col-md-2">
-                @Html.Label(@"Value:", new { @class = "control-label", @for = "inputdefault" })
+                @Html.Label(@"ConnectionString:", new { @class = "control-label", @for = "inputdefault" })
             </div>
             <div class="col-md-8">
                 @Html.TextBoxFor(model => model.FinalConfigurationString, new
