Look and feel of Search page

--- a/PeopleSearch/Areas/AreaPerson/Views/Person/Index.cshtml
+++ b/PeopleSearch/Areas/AreaPerson/Views/Person/Index.cshtml
@@ -7,7 +7,7 @@
 @using (Html.BeginForm(""))
 {
     @*// "connectionString=Data Source=LENOVO-PC\SQLEXPRESS;Database=person;Integrated Security=True"*@
-    <div class="page-header"><h1>Configure ConnectionString</h1></div>
+    <div class="page-header col-sm-10"><h1>Configure ConnectionString</h1></div>
     <div class="container form-horizontal">
         <div class="form-group">
             <div class=" col-sm-8">
