--- a/PeopleSearch/Areas/AreaPerson/Views/Person/Result.cshtml
+++ b/PeopleSearch/Areas/AreaPerson/Views/Person/Result.cshtml
@@ -3,7 +3,7 @@
 
 @if(Model.Count() < 1)
 {
-    <div class="alert-warning col-sm-4 zeroRecordMsg">No person exist with this name. Please try again! </div>
+    <div class="alert-warning col-sm-offset-5 col-sm-4 zeroRecordMsg">No person exist with this name. Please try again! </div>
 }
 
 @foreach (var person in Model)
