--- a/PeopleSearch/Areas/AreaPerson/Views/Person/Register.cshtml
+++ b/PeopleSearch/Areas/AreaPerson/Views/Person/Register.cshtml
@@ -6,7 +6,7 @@
 
 
 <div class="container form-horizontal registration-container-div">
-    <div class="page-header"><h1>Register</h1></div>
+    <div class="page-header col-sm-10"><h1>Register</h1></div>
     <div class="row col-sm-10 ">
 
 
