final UI changes for Search page

--- a/PeopleSearch/Areas/AreaPerson/Views/Person/Result.cshtml
+++ b/PeopleSearch/Areas/AreaPerson/Views/Person/Result.cshtml
@@ -11,13 +11,13 @@
     <div class="container detail-div-top-buffer">
         <div class="row col-sm-12 person-row-div">
 
-            <div class="col-md-3">
+            <div class="col-sm-3">
                 <div class=" item-image ">
                     <img src="@person.Image" class="img-responsive">
                 </div>
             </div>
 
-            <div class="col-md-9 person-info">
+            <div class="col-sm-9 person-info">
 
                 <div class=" row">
                     <label class="col-sm-3 col-form-label">First name</label>
