--- a/PeopleSearch/Areas/AreaPerson/Views/Person/Search.cshtml
+++ b/PeopleSearch/Areas/AreaPerson/Views/Person/Search.cshtml
@@ -7,10 +7,10 @@
 
 
 <div class="container search-container-div">
-    <div class="page-header"><h1>Search person by first name or last name</h1></div>
+    <div class="page-header col-sm-offset-2 col-sm-8" ><h1>Search person by first name or last name</h1></div>
     <div class="row col-sm-10">
-        <div class="input-group col-lg-offset-4 col-sm-5">
-            <input type="text" id="searchTextBox" class="form-control searchTextBox" placeholder="Enter first name or last name" />
+        <div class="input-group col-sm-offset-5 col-sm-5">
+            <input type="text" id="searchTextBox" class="input-lg form-control searchTextBox" placeholder="Enter first name or last name" />
             <span class="input-group-addon search-span" id="searchBtn" onclick="SearchPerson(event)">
                 <i class="glyphicon glyphicon-search"></i>
             </span>
